automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,8 @@
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "italy = countries[-3]"
+    "italy = countries[-3]\n",
+    "ital"
    ]
   },
   {
