--- a/index.ipynb
+++ b/index.ipynb
@@ -127,13 +127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "italy = None # 'Italy'\n",
     "italy = countries[-3]\n",
-    "ital"
+    "italy"
    ]
   },
   {
