--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    },
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries\n",
     "kindof_neighbors"
    ]
   },
