--- a/index.ipynb
+++ b/index.ipynb
@@ -246,13 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countre"
+    "countries.append('Malta')"
    ]
   },
   {
