automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,13 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('Thailand')\n",
+    "countries"
    ]
   },
   {
