--- a/index.ipynb
+++ b/index.ipynb
@@ -262,12 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thailand'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries.append('Thailand')\n",
-    "countries"
+    "countries\n",
+    "countries.pop()"
    ]
   },
   {
