automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,16 +262,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thailand'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +293,8 @@
    "source": [
     "countries.append('Thailand')\n",
     "countries\n",
-    "countries.pop()"
+    "countries.pop()\n",
+    "countries"
    ]
   },
   {
