automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -280,18 +280,18 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Thailand',\n",
-       " 'Thailand']"
+       " 'Malta']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries.append('Thailand')\n",
+    "countries\n",
+    "countries.pop()\n",
     "countries\n",
     "countries.pop()\n",
     "countries"
