automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,20 +280,17 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
-       " 'Malta']"
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries.append('Thailand')\n",
-    "countries\n",
-    "countries.pop()\n",
-    "countries\n",
-    "countries.pop()\n",
     "countries"
    ]
   },
