--- a/index.ipynb
+++ b/index.ipynb
@@ -351,7 +351,8 @@
     }
    ],
    "source": [
-    "countries[4]='USA'\n",
+    "countries[4]='Mexico'\n",
+    "\n",
     "countries"
    ]
   },
