automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -351,8 +351,7 @@
     }
    ],
    "source": [
-    "countries[4]='Mexico'\n",
-    "countries[]\n",
+    "countries[6]='USA'\n",
     "countries"
    ]
   },
