automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'New Mexico',\n",
+       " 'USA',\n",
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
@@ -345,7 +345,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
