--- a/index.ipynb
+++ b/index.ipynb
@@ -468,32 +468,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       "10"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique_countries"
+    "unique_countries\n",
+    "len(unique_countries)"
    ]
   },
   {
@@ -541,7 +533,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = len\n",
     "num_of_repeats # 3"
    ]
   },
